Fix for Grand Hospitality Sponsors, z-index fix (About page)

--- a/project/about/assets/css/team.scss
+++ b/project/about/assets/css/team.scss
@@ -75,7 +75,6 @@ article.about {
       .member-link {
         background: rgb(46, 101, 184);
         opacity: 0.7;
-        z-index: 5;
         height: 2.3em;
         width: 2.3em;
         position: absolute;
